--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -5,7 +5,7 @@
 }
 <body>
     <div class="row index-page-margin">
-        <p class="page-header col col-md-10">Hej, @User.Identity.Name</p>
+        <p class="page-header col col-md-10">Ansökningar</p>
     </div>
     <br />
     <br />
