--- a/Sjuklöner/Views/Shared/_LoginPartial.cshtml
+++ b/Sjuklöner/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class="user-id" })
+            @Html.ActionLink($"Hej {User.Identity.GetUserName()}", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class="user-id" })
         </li>
         <li><a class="logoff" id="logoff" href="javascript:document.getElementById('logoutForm').submit()" style="padding-right: 5px;">Logga ut</a></li>
     </ul>
