--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -56,8 +56,9 @@
                 <div class="blue-bar-filler" style="width:75%; margin-left: auto; margin-right: auto; float: none;">
                     <ul style="padding-left:4px;">
                         <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
-                        <li>@Html.ActionLink("Bolagsuppgifter", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Bolagsuppgifter", "Index", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
                         <li>@Html.ActionLink("Assistenter", "Index", "Assistants", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Ombudsuppgifter", "IndexOmbud", "CareCompanies", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
