--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -7,6 +7,7 @@
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.CareCompanyId)
     @Html.AntiForgeryToken()
 
     <div class="row">
@@ -105,123 +106,3 @@
         </div>
     </div>
 }
-
-
-@*<div class="form-group">
-        @Html.LabelFor(model => model.StorageApproval, htmlAttributes: new { @class = "control-label col-md-3 display-right-align" })
-        <div class="col-md-2">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.StorageApproval)
-                @Html.ValidationMessageFor(model => model.StorageApproval, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>*@
-
-@*<div class="form-group">
-        @Html.LabelFor(model => model.EmailConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.EmailConfirmed)
-                @Html.ValidationMessageFor(model => model.EmailConfirmed, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>*@
-
-@*<div class="form-group">
-        @Html.LabelFor(model => model.SecurityStamp, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.SecurityStamp, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SecurityStamp, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-@*<div class="form-group">
-        @Html.LabelFor(model => model.PhoneNumberConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.PhoneNumberConfirmed)
-                @Html.ValidationMessageFor(model => model.PhoneNumberConfirmed, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>*@
-
-@*<div class="form-group">
-        @Html.LabelFor(model => model.TwoFactorEnabled, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.TwoFactorEnabled)
-                @Html.ValidationMessageFor(model => model.TwoFactorEnabled, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.LockoutEndDateUtc, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.LockoutEndDateUtc, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.LockoutEndDateUtc, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.LockoutEnabled, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.LockoutEnabled)
-                @Html.ValidationMessageFor(model => model.LockoutEnabled, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.AccessFailedCount, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.AccessFailedCount, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.AccessFailedCount, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-
-@*<div class="form-group">
-        @Html.LabelFor(model => model.Approved, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.Approved)
-                @Html.ValidationMessageFor(model => model.Approved, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>*@
-
-@*<div class="form-group">
-        @Html.LabelFor(model => model.ClearingNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.ClearingNumber, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ClearingNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-
-@*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
