--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -21,6 +21,11 @@
     </div>
     <br />
     <br />
+    <div class="row">
+        <div class="col">
+            @Html.ActionLink("Ny handläggare?", "../Account/NewAdmOff", null, new { @class = "btn btn-primary btn-primary-wide" })
+        </div>
+    </div>
     <hr class="claim-divider" />
     <div class="row">
         <div class="col">
