--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -6,6 +6,16 @@
 <body>
     <div class="row index-page-margin">
         <p class="page-header col col-md-10">Ansökningar</p>
+        @using (Html.BeginForm("IndexPageOmbud", "Claims", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            <select name="searchBy" class="col-md-2 input-sm">
+                <option value="Referensnummer">Referensnummer</option>
+                <option value="CSSN">Kundens Personnummer</option>
+                <option value="ASSN">Assistentens Personnummer</option>
+            </select>
+            <input type="text" name="searchString" id="searchString" class="col-md-2" input-sm />
+            <input type="submit" />
+        }
     </div>
     <br />
     <br />
@@ -82,9 +92,9 @@
                                 @*@Html.ActionLink("Uppdatera", "Create", new { id = item.Id }, new { @class = "btn btn-success-small" }) |*@
                                 @*@Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })*@
                                 @*@if (item.RejectedSum > 1)
-        {
-            @Html.ActionLink("Överklaga", "Create", null, new { @class = "btn btn-warning btn-warning-small" })
-        }*@
+                                    {
+                                        @Html.ActionLink("Överklaga", "Create", null, new { @class = "btn btn-warning btn-warning-small" })
+                                    }*@
                                 @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary-small" })*@
                             </td>
                         </tr>
