--- a/Sjuklöner/Views/Assistants/Details.cshtml
+++ b/Sjuklöner/Views/Assistants/Details.cshtml
@@ -83,21 +83,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.InsuranceRate)
+            @Html.DisplayNameFor(model => model.PensionAndInsuranceRate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.InsuranceRate)
+            @Html.DisplayFor(model => model.PensionAndInsuranceRate)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PensionRate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PensionRate)
-        </dd>
-
     </dl>
 </div>
 <p>
