--- a/Sjuklöner/Views/Claims/Create4.cshtml
+++ b/Sjuklöner/Views/Claims/Create4.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
         <p class="col col-md-2"></p>
-        <p class="col col-md-10 second-page-header2">Steg 4: Ladda upp bilagor</p>
+        <p class="col col-md-10 second-page-header2">Steg 4: Ladda upp bilagor och skicka in ansökan</p>
     </div>
     <div class="row">
         <div class="form-horizontal">
