--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -74,7 +74,7 @@
                                 @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.AssistantSSN)
+                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
@@ -164,7 +164,7 @@
                                 @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.AssistantSSN)
+                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
@@ -260,7 +260,7 @@
                                 @Html.DisplayFor(modelItem => item.CareCompany.CompanyName)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.AssistantSSN)
+                                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
