--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -73,10 +73,10 @@
             </div>
         </div>
         <div>
-            @Html.LabelFor(model => model.InsuranceRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
+            @Html.LabelFor(model => model.PensionAndInsuranceRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
             <div class="col-md-2">
-                @Html.EditorFor(model => model.InsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InsuranceRate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.PensionAndInsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
@@ -86,13 +86,6 @@
             <div class="col-md-4">
                 @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.PensionRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
-            <div class="col-md-2">
-                @Html.EditorFor(model => model.PensionRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PensionRate, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
