--- a/Sjuklöner/Views/Assistants/Edit.cshtml
+++ b/Sjuklöner/Views/Assistants/Edit.cshtml
@@ -93,18 +93,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.InsuranceRate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PensionAndInsuranceRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InsuranceRate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PensionRate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PensionRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PensionRate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.PensionAndInsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger" })
             </div>
         </div>
 
