--- a/Sjuklöner/Views/CareCompanies/IndexOmbud.cshtml
+++ b/Sjuklöner/Views/CareCompanies/IndexOmbud.cshtml
@@ -20,7 +20,7 @@
 </div>
 <div class="row">
     <div class="col col-md-1">
-        @Html.ActionLink("Nytt ombud", "Create", null, new { @class = "btn btn-primary btn-primary3" })
+        @Html.ActionLink("Nytt ombud", "CreateOmbud", null, new { @class = "btn btn-primary btn-primary3" })
     </div>
 </div>
 <br />
@@ -63,11 +63,21 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
-            <td>
-                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-            </td>
+            @if (item.Id == Model.CurrentUserId)
+            {
+                <td>
+                    @Html.ActionLink("Uppdatera", "EditOmbud", new { id = item.Id }) |
+                    @Html.ActionLink("Detaljer", "DetailsOmbud", new { id = item.Id }) |
+                </td>
+            }
+            else
+            {
+                <td>
+                    @Html.ActionLink("Uppdatera", "EditOmbud", new { id = item.Id }) |
+                    @Html.ActionLink("Detaljer", "DetailsOmbud", new { id = item.Id }) |
+                    @Html.ActionLink("Ta bort", "DeleteOmbud", new { id = item.Id })
+                </td>
+            }
         </tr>
     }
 </table>
