--- a/Sjuklöner/Views/Claims/Create1.cshtml
+++ b/Sjuklöner/Views/Claims/Create1.cshtml
@@ -34,93 +34,156 @@
     </div>
 
     <div class="row">
-        <div class="form-horizontal">
+        @*<div class="form-horizontal">*@
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            @*ORGANISATIONNUMBER NEEDED IN DEMO MODE!!!
-                    <div class="form-group">
-                    @Html.LabelFor(model => model.OrganisationNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10 align-bottom1">
-                        @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { placeholder = "", @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.CustomerSSN, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.CustomerSSN, new { htmlAttributes = new { placeholder = "", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger" })
+        @*ORGANISATIONNUMBER NEEDED IN DEMO MODE!!!
+                <div class="form-group">
+                @Html.LabelFor(model => model.OrganisationNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10 align-bottom1">
+                    @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { placeholder = "", @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+        <div class="row row-padding2">
+            <div>
+                @Html.LabelFor(model => model.CustomerName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
+                <div class="col col-md-4">
+                    @Html.EditorFor(model => model.CustomerName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerName, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <div class="form-group">
+            <div>
                 @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedRegAssistantId, new SelectList(Model.RegularAssistants, "Value", "Text", Model.SelectedRegAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <div class="form-group">
+        </div>
+        <div class="row row-padding2">
+            <div>
+                @Html.LabelFor(model => model.CustomerSSN, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
+                <div class="col col-md-4">
+                    @Html.EditorFor(model => model.CustomerSSN, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div>
                 @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <div class="form-group">
+        </div>
+        <div class="row row-padding2">
+            <div>
+                @Html.LabelFor(model => model.CustomerAddress, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
+                <div class="col col-md-4">
+                    @Html.EditorFor(model => model.CustomerAddress, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerAddress, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div>
                 @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.EditorFor(model => model.FirstDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <div class="form-group">
+        </div>
+        <div class="row row-padding2">
+            <div>
+                @Html.LabelFor(model => model.CustomerPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
+                <div class="col col-md-4">
+                    @Html.EditorFor(model => model.CustomerPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerPhoneNumber, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div>
                 @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
+        @*<div class="form-group">
+            @Html.LabelFor(model => model.CustomerSSN, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CustomerSSN, new { htmlAttributes = new { placeholder = "", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-            @*EMAIL OPTIONALLY NEEDED IN DEMO MODE!!!
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
+        <div class="form-group">
+            @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.SelectedRegAssistantId, new SelectList(Model.RegularAssistants, "Value", "Text", Model.SelectedRegAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-            @*@if (Model.Rejected)
-                {
-                    <div class="row">
-                        <p class="col col-md-2"></p>
-                        <p class="col col-md-10">@Model.RejectReason</p>
-                    </div>
-                }*@
+        <div class="form-group">
+            @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-            <div class="row">
-                <div class="form-group">
-                    <div class="col col-md-offset-2 col-md-1">
-                        <input class="btn btn-primary btn-primary-small btn-left-margin-10" type="submit" name="submitButton" value="Till steg 2" id="proceed" />
-                    </div>
-                    <div class="col col-md-1">
-                        <input class="btn btn-secondary btn-secondary-small btn-left-margin-5" type="submit" name="submitButton" value="Spara" id="save" />
-                    </div>
-                    <div class="col col-md-1">
-                        <input class="btn btn-secondary btn-secondary-small" type="submit" name="submitButton" value="Avbryt" id="cancel" />
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FirstDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+        @*EMAIL OPTIONALLY NEEDED IN DEMO MODE!!!
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+
+        @*@if (Model.Rejected)
+            {
+                <div class="row">
+                    <p class="col col-md-2"></p>
+                    <p class="col col-md-10">@Model.RejectReason</p>
+                </div>
+            }*@
+
+        <div class="row">
+            <div class="form-group">
+                <div class="small-padding-left col col-md-offset-2 col-md-1">
+                    <input class="btn btn-primary btn-primary-small btn-left-margin-10" type="submit" name="submitButton" value="Till steg 2" id="proceed" />
+                </div>
+                <div class="small-padding-left3 col col-md-1">
+                    <input class="btn btn-secondary btn-secondary-small btn-left-margin-5" type="submit" name="submitButton" value="Spara" id="save" />
+                </div>
+                <div class="small-padding-left2 col col-md-1">
+                    <input class="btn btn-secondary btn-secondary-small" type="submit" name="submitButton" value="Avbryt" id="cancel" />
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
         </div>
+        <br>
+        <br>
+        <br>
+        @*</div>*@
     </div>
 }
 
