--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1100,6 +1100,10 @@ special-left-margin {
     padding-left: 7px;
 }
 
+.no-left-margin {
+    margin-left: 0;
+}
+
 .line-height-10 {
     line-height: 1.0;
 }
@@ -1380,4 +1384,8 @@ a:hover, a:focus {
    -webkit-transition:top 4s;
    float:right;
 
+}
+
+.hidden-by-default {
+    display: none;
 }
