--- a/Sjuklöner/Views/CareCompanies/Delete.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Delete.cshtml
@@ -3,13 +3,13 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<div class="row index-page-margin">
+    <p class="col col-md-2"></p>
+    <p class="page-header8 col col-md-10">Ta bort assistansbolaget</p>
+    <nl class="col col-md-offset-2 font-size-16">Klicka på "Bekräfta" nedan för att ta bort detta assistansbolag</nl>
+</div>
 <div>
-    <h4>CareCompany</h4>
-    <hr />
+    <hr class="claim-divider" />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.CompanyName)
@@ -85,7 +85,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
