--- a/Sjuklöner/Views/CareCompanies/Details.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Details.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
+<div class="row index-page-margin">
+    <p class="col col-md-2"></p>
+    <p class="page-header8 col col-md-10">Detaljvy, assistansbolag</p>
+</div>
 <div>
-    <h4>CareCompany</h4>
-    <hr />
+    <hr class="claim-divider" />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.CompanyName)
@@ -85,6 +85,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
+    @Html.ActionLink("Tillbaka", "Index")
 </p>
