--- a/Sjuklöner/Views/Claims/Create1.cshtml
+++ b/Sjuklöner/Views/Claims/Create1.cshtml
@@ -13,10 +13,10 @@
     </nav>
 </div>
 
-@using (Html.BeginForm("Create1", "Claims", new { refNumber = Model.ReferenceNumber }, FormMethod.Post))
+@using (Html.BeginForm("Create1", "Claims", new { refNumber = Model.ClaimNumber }, FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(model => model.ReferenceNumber)
+    @*@Html.HiddenFor(model => model.ClaimNumber)*@
     @Html.HiddenFor(model => model.OrganisationNumber)
     for (int i = 0; i < Model.AssistantIds.Count(); i++)
     {
@@ -74,6 +74,8 @@
                 @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
+                    @*@Html.ValidationMessageFor(model => model.SelectedSubAssistantId, "", new { @class = "text-danger" })*@
+                    @*@Html.ValidationMessage("SelectedSubAssistantId", "Ingen vald", new { @class = "text-danger" })*@
                     @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -110,45 +112,6 @@
                 </div>
             </div>
         </div>
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.CustomerSSN, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CustomerSSN, new { htmlAttributes = new { placeholder = "", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.SelectedRegAssistantId, new SelectList(Model.RegularAssistants, "Value", "Text", Model.SelectedRegAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FirstDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
 
         @*EMAIL OPTIONALLY NEEDED IN DEMO MODE!!!
             <div class="form-group">
@@ -159,34 +122,46 @@
                 </div>
             </div>*@
 
-        @*@if (Model.Rejected)
-            {
-                <div class="row">
-                    <p class="col col-md-2"></p>
-                    <p class="col col-md-10">@Model.RejectReason</p>
-                </div>
-            }*@
-
         <div class="row">
-            <div class="form-group">
-                <div class="small-padding-left col col-md-offset-2 col-md-1">
-                    <input class="btn btn-primary btn-primary-small btn-left-margin-10" type="submit" name="submitButton" value="Till steg 2" id="proceed" />
-                </div>
-                <div class="small-padding-left3 col col-md-1">
-                    <input class="btn btn-secondary btn-secondary-small btn-left-margin-5" type="submit" name="submitButton" value="Spara" id="save" />
-                </div>
-                <div class="small-padding-left2 col col-md-1">
-                    <input class="btn btn-secondary btn-secondary-small" type="submit" name="submitButton" value="Avbryt" id="cancel" />
-                </div>
+            <div class="small-padding-left col col-md-offset-2 col-md-1">
+                <input class="btn btn-primary btn-primary-small btn-left-margin-10" type="submit" name="submitButton" value="Till steg 2" id="proceed" />
             </div>
+            <div class="small-padding-left3 col col-md-1">
+                <input class="btn btn-secondary btn-secondary-small btn-left-margin-5" type="submit" name="submitButton" value="Spara" id="save" />
+            </div>
+            <div class="small-padding-left3 col col-md-1">
+                @Html.ActionLink("Avbryt", "IndexPageOmbud", null, new { @class = "btn btn-secondary btn-secondary-small" })
+            </div>
+            @if (Model.CompletionStage >= 1)
+            {
+                <a href="#" id="loadPartialActionLink">Visa ansökan</a>
+                @*@Html.ActionLink("Visa ansökan", null, null, new { refNumber = Model.ClaimNumber }, new { id = "" })*@
+                //"_ShowClaim", new { refNumber = Model.ClaimNumber }, new { @class = "btn btn-secondary btn-secondary-small" })
+                <div id="AJAXContainer"></div>
+                <div class="hidden-by-default" id="claimnumber">@Model.ClaimNumber</div>
+            }
         </div>
         <br>
         <br>
         <br>
-        @*</div>*@
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script>
+$('#loadPartialActionLink').on('click', function (e) {
+    e.preventDefault();
+    var claimNumber = document.getElementById("claimnumber");
+    $.ajax({
+        type: "GET",
+        url: '/Claims/_ShowClaim',
+        data: {
+            refNumber: claimNumber.innerHTML
+        },
+        success: function (data, textStatus, jqXHR) {
+            $('#AJAXContainer').html(data);
+        }
+    });
+});
+</script>
